--- a/src/app/courses/course-info.component.html
+++ b/src/app/courses/course-info.component.html
@@ -1,1 +1,75 @@
-<h2>Course Id = {{ courseId }}</h2>
+<h2>Course info</h2>
+
+<hr/>
+
+<form #courseForm="ngForm">
+    <div class="from-group row">
+        <label class="col-sm-2 col-form-label">Name: </label>
+        <div class="col-sm-10">
+            <input 
+                [(ngModel)]="course.name" 
+                name="name" required
+                #courseName="ngModel" 
+                [ngClass]="{'is-invalid': courseName.invalid}"
+                class="form-control"
+            >
+            <div class="invalid-feedback">
+                <span>Course name is required</span> 
+            </div>
+        </div>
+    </div>
+
+    <div class="from-group row">
+        <label class="col-sm-2 col-form-label">Price: </label>
+        <div class="col-sm-10">
+            <input 
+                [(ngModel)]="course.price" 
+                name="price" required
+                #coursePrice="ngModel" 
+                type="number"
+                [ngClass]="{'is-invalid': coursePrice.invalid}"
+                class="form-control"
+            >
+            <div class="invalid-feedback">
+                <span>Course price is required</span> 
+            </div>
+        </div>
+    </div>
+
+    <div class="from-group row">
+        <label class="col-sm-2 col-form-label">Rating: </label>
+        <div class="col-sm-10">
+            <input 
+                [(ngModel)]="course.rating" 
+                name="rating" required
+                #courseRating="ngModel" 
+                type="number"
+                [ngClass]="{'is-invalid': courseRating.invalid}"
+                class="form-control"
+            >
+            <div class="invalid-feedback">
+                <span>Course rating is required</span> 
+            </div>
+        </div>
+    </div>
+
+    <div class="from-group row">
+        <label class="col-sm-2 col-form-label">Description: </label>
+        <div class="col-sm-10">
+            <textarea 
+                [(ngModel)]="course.description" 
+                name="description" required
+                #courseDescription="ngModel" 
+                type="string"
+                [ngClass]="{'is-invalid': courseDescription.invalid}"
+                class="form-control"
+            ></textarea>
+            <div class="invalid-feedback">
+                <span>Course description is required</span> 
+            </div>
+        </div>
+    </div>
+
+    <button [disabled]="courseForm.invalid" (click)="save()" class="btn btn-primary mr-3">Save</button>
+    <button [routerLink]="'/courses'" class="btn btn-secondary">Back</button>
+</form>
